feat: CRUD API code for Lesson